@@ -1,3 +1,9 @@
+2004-06-23  Choe Hwanjin <krisna@kldp.org>
+	* src/ic.c: nabi_ic_commit_keyval() 함수에서 더이상 XIM_COMMIT을 사용
+	하지 않고, 바로 key event를 forwarding하도록 수정함. 일부 프로그램에서
+	하나의 이벤트에서 두번 commit하는 것을 받아들이지 못하는 듯함.
+	ex) wine
+
 2004-06-05  Choe Hwanjin <krisna@kldp.org>
 	* src/server.h src/server/c src/ui.c src/nabi.h src/automata.h
 	src/keyboard tables/compose/default configure.in: 키보드 테이블과
